--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RajFlix Movie Streaming</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body style="background:#111;color:#fff;">
 
+<div class="container mt-4">
+  <h2 class="mb-4 text-center">RajFlix Movie Streaming</h2>
+  <div id="movieList" class="row"></div>
+</div>
+
+<script>
+// TMDB Config
+const client_key = "275d762c21f3a57f54f0001eefef97ab";
+const api_url = "https://api.themoviedb.org/3";
+const img_path = "https://image.tmdb.org/t/p/w500";
+
+// Proxy URL Setup
+const proxyBase = "https://raj-flix.movielovers.workers.dev/?url="; // আপনার Worker Proxy URL
+const driveIndexUrl = 'https://rajflix.movielovers.workers.dev/Movies/';
+const proxyUrl = proxyBase + encodeURIComponent(driveIndexUrl);
+
+async function fetchDriveIndex(url) {
+  const res = await fetch(url);
+  const html = await res.text();
+  const parser = new DOMParser();
+  const doc = parser.parseFromString(html, 'text/html');
+  const links = [...doc.querySelectorAll('a')];
+  
+  const videos = links.filter(link => link.href.endsWith('.mp4') || link.href.endsWith('.mkv'));
+
+  videos.forEach(video => {
+    const fileName = video.textContent.trim();
+    const cleanedName = cleanFileName(fileName);
+    const videoUrl = driveIndexUrl + encodeURIComponent(video.getAttribute('href'));
+    searchTMDB(cleanedName, videoUrl);
+  });
+}
+
+function cleanFileName(name) {
+  return name
+    .replace(/\./g, ' ')
+    .replace(/1080p|720p|480p|BluRay|x264|x265|HEVC|HDRip|WEBRip|WEB-DL|mp4|mkv/gi, '')
+    .replace(/\s+/g, ' ')
+    .trim();
+}
+
+function searchTMDB(query, videoUrl) {
+  const url = `${api_url}/search/movie?api_key=${client_key}&query=${encodeURIComponent(query)}`;
+
+  fetch(url)
+    .then(res => res.json())
+    .then(data => {
+      if (data.results && data.results.length > 0) {
+        const movie = data.results[0];
+        showMovieCard(movie, videoUrl);
+      } else {
+        showMovieCard({title: query, poster_path: null, release_date: ''}, videoUrl);
+      }
+    })
+    .catch(err => console.log(err));
+}
+
+function showMovieCard(movie, videoUrl) {
+  const container = document.getElementById('movieList');
+  const poster = movie.poster_path ? `${img_path}${movie.poster_path}` : 'https://via.placeholder.com/500x750?text=No+Image';
+
+  container.innerHTML += `
+    <div class="col-md-3 mb-4">
+      <div class="card bg-dark text-white h-100">
+        <img src="${poster}" class="card-img-top" alt="${movie.title}">
+        <div class="card-body">
+          <h5 class="card-title">${movie.title}</h5>
+          <p class="card-text" style="font-size:12px">${movie.release_date || 'Unknown Year'}</p>
+          <a href="${videoUrl}" class="btn btn-primary btn-block" target="_blank">Watch Now</a>
+        </div>
+      </div>
+    </div>
+  `;
+}
+
+// Initialize
+fetchDriveIndex(proxyUrl);
+</script>
+
+</body>
+</html>
