--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ const img_path = "https://image.tmdb.org/t/p/w500";
 
 // Proxy URL Setup
 const proxyBase = "https://raj-flix.movielovers.workers.dev/?url="; // আপনার Worker Proxy URL
-const driveIndexUrl = 'https://rajflix.movielovers.workers.dev/Movies/';
+const driveIndexUrl = 'https://rajflix.movielovers.workers.dev/0:/';
 const proxyUrl = proxyBase + encodeURIComponent(driveIndexUrl);
 
 async function fetchDriveIndex(url) {
