--- a/index.html
+++ b/index.html
@@ -1,68 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RajFlix Movie Streaming</title>
+  <title>RajFlix GDToT Streaming</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body style="background:#111;color:#fff;">
-
-<div class="container mt-4">
-  <h2 class="mb-4 text-center">RajFlix Movie Streaming</h2>
+<body style="background:#111;color:#fff;"><div class="container mt-4">
+  <h2 class="mb-4 text-center">RajFlix GDToT Streaming</h2>
   <div id="movieList" class="row"></div>
-</div>
-
-<script>
-// TMDB Config
+</div><script>
 const client_key = "275d762c21f3a57f54f0001eefef97ab";
 const api_url = "https://api.themoviedb.org/3";
 const img_path = "https://image.tmdb.org/t/p/w500";
 
-// Proxy URL Setup
-const proxyBase = "https://raj-flix.movielovers.workers.dev/?url="; // আপনার Worker Proxy URL
-const driveIndexUrl = 'https://rajflix.movielovers.workers.dev/0:/';
+const proxyBase = "https://rajflix.movielovers.workers.dev/?url="; // আপনার নতুন Worker URL
+const driveIndexUrl = "https://rajflix.movielovers.workers.dev/0:/GDToT/";
 const proxyUrl = proxyBase + encodeURIComponent(driveIndexUrl);
 
-async function fetchDriveIndex(url) {
-  const res = await fetch(url);
+async function fetchDriveFiles() {
+  const res = await fetch(proxyUrl);
   const html = await res.text();
   const parser = new DOMParser();
   const doc = parser.parseFromString(html, 'text/html');
   const links = [...doc.querySelectorAll('a')];
-  
-  const videos = links.filter(link => link.href.endsWith('.mp4') || link.href.endsWith('.mkv'));
 
-  videos.forEach(video => {
-    const fileName = video.textContent.trim();
-    const cleanedName = cleanFileName(fileName);
-    const videoUrl = driveIndexUrl + encodeURIComponent(video.getAttribute('href'));
+  const videoLinks = links.filter(link => link.href.endsWith('.mp4') || link.href.endsWith('.mkv'));
+
+  videoLinks.forEach(link => {
+    const fileName = link.textContent.trim();
+    const cleanedName = cleanMovieName(fileName);
+    const videoUrl = driveIndexUrl + encodeURIComponent(link.getAttribute('href'));
     searchTMDB(cleanedName, videoUrl);
   });
 }
 
-function cleanFileName(name) {
-  return name
-    .replace(/\./g, ' ')
-    .replace(/1080p|720p|480p|BluRay|x264|x265|HEVC|HDRip|WEBRip|WEB-DL|mp4|mkv/gi, '')
-    .replace(/\s+/g, ' ')
-    .trim();
+function cleanMovieName(name) {
+  return name.replace(/\./g, ' ')
+             .replace(/(1080p|720p|BluRay|HDRip|x264|x265|HEVC|WEBRip|WEB-DL|mp4|mkv)/gi, '')
+             .replace(/\s+/g, ' ')
+             .trim();
 }
 
-function searchTMDB(query, videoUrl) {
-  const url = `${api_url}/search/movie?api_key=${client_key}&query=${encodeURIComponent(query)}`;
-
-  fetch(url)
+function searchTMDB(query, url) {
+  const tmdbUrl = `${api_url}/search/movie?api_key=${client_key}&query=${encodeURIComponent(query)}`;
+  
+  fetch(tmdbUrl)
     .then(res => res.json())
     .then(data => {
       if (data.results && data.results.length > 0) {
         const movie = data.results[0];
-        showMovieCard(movie, videoUrl);
+        showMovieCard(movie, url);
       } else {
-        showMovieCard({title: query, poster_path: null, release_date: ''}, videoUrl);
+        showMovieCard({title: query, poster_path: null, release_date: ''}, url);
       }
-    })
-    .catch(err => console.log(err));
+    });
 }
 
 function showMovieCard(movie, videoUrl) {
@@ -83,9 +74,6 @@ function showMovieCard(movie, videoUrl) {
   `;
 }
 
-// Initialize
-fetchDriveIndex(proxyUrl);
-</script>
-
-</body>
+fetchDriveFiles();
+</script></body>
 </html>
