--- a/index.html
+++ b/index.html
@@ -1,47 +1,31 @@
-
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RajFlix Thunder Clone</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RajFlix GDToT Movie List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body { background: #111; color: #fff; }
-    .card { background: #222; border: none; }
-    .card img { border-radius: 10px; }
-  </style>
 </head>
-<body>
-<div class="container mt-4">
-  <h2 class="mb-4 text-center">RajFlix Thunder Style Clone</h2>
+<body style="background:#111;color:#fff;"><div class="container mt-4">
+  <h2 class="mb-4 text-center">RajFlix GDToT Movie List</h2>
   <div id="movieList" class="row"></div>
-</div>
-
-<script>
+</div><script src="https://apis.google.com/js/api.js"></script><script>
+const folderId = "119Dj7LDs3uf9ni6J6nHWt2TdxYbQ9O3Z";
 const client_key = "275d762c21f3a57f54f0001eefef97ab";
 const api_url = "https://api.themoviedb.org/3";
-const img_path = "https://image.tmdb.org/t/p/w1280";
-const proxyBase = "https://rajflix.movielovers.workers.dev/?url=";  
-const driveIndexUrl = "https://rajflix.movielovers.workers.dev/0:/GDToT/";  
-const proxyUrl = proxyBase + encodeURIComponent(driveIndexUrl);
+const img_path = "https://image.tmdb.org/t/p/w500";
 
+const serviceAccountEmail = "rajflix-393@upbeat-beach-456816-m6.iam.gserviceaccount.com";
 
-  
-async function fetchDriveFiles() {
-  const res = await fetch(proxyUrl);
-  const html = await res.text();
-  const parser = new DOMParser();
-  const doc = parser.parseFromString(html, 'text/html');
-  const links = [...doc.querySelectorAll('a')];
+async function listFiles() {
+  const url = `https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents&key=${client_key}&fields=files(name,id,mimeType)`;
+  const res = await fetch(url);
+  const data = await res.json();
 
-  const videoLinks = links.filter(link => link.href.endsWith('.mp4') || link.href.endsWith('.mkv'));
-
-  videoLinks.forEach(link => {
-    const fileName = link.textContent.trim();
-    const { title, year } = extractTitleAndYear(fileName);
-    const videoUrl = driveIndexUrl + encodeURIComponent(link.getAttribute('href'));
-    searchTMDB(title, year, videoUrl);
+  data.files.forEach(file => {
+    if(file.mimeType !== 'application/vnd.google-apps.folder') {
+      const { title, year } = extractTitleAndYear(file.name);
+      searchTMDB(title, year, `https://drive.google.com/uc?id=${file.id}&export=download`);
+    }
   });
 }
 
@@ -50,41 +34,25 @@ function extractTitleAndYear(name) {
   const year = yearMatch ? yearMatch[0] : null;
 
   const title = name.replace(/\./g, ' ')
-                    .replace(/(1080p|720p|480p|BluRay|WEBRip|HDRip|WEB-DL|x264|x265|HEVC|mp4|mkv)/gi, '')
-                    .replace(/(19|20)\d{2}/g, '')
-                    .replace(/\s+/g, ' ')
-                    .trim();
+                     .replace(/(1080p|720p|480p|BluRay|WEBRip|HDRip|WEB-DL|x264|x265|HEVC|mp4|mkv)/gi, '')
+                     .replace(/(19|20)\d{2}/g, '')
+                     .replace(/\s+/g, ' ')
+                     .trim();
 
   return { title, year };
 }
 
-function searchTMDB(title, year, url) {
+function searchTMDB(title, year, videoUrl) {
   let tmdbUrl = `${api_url}/search/movie?api_key=${client_key}&query=${encodeURIComponent(title)}`;
-  if (year) { tmdbUrl += `&year=${year}`; }
+  if (year) tmdbUrl += `&year=${year}`;
 
   fetch(tmdbUrl)
     .then(res => res.json())
     .then(data => {
-      if (data.results && data.results.length > 0) {
-        const movie = data.results[0];
-        showMovieCard(movie, url);
+      if(data.results && data.results.length > 0) {
+        showMovieCard(data.results[0], videoUrl);
       } else {
-        searchTV(title, url);
-      }
-    });
-}
-
-function searchTV(title, url) {
-  const tmdbUrl = `${api_url}/search/tv?api_key=${client_key}&query=${encodeURIComponent(title)}`;
-
-  fetch(tmdbUrl)
-    .then(res => res.json())
-    .then(data => {
-      if (data.results && data.results.length > 0) {
-        const tv = data.results[0];
-        showMovieCard(tv, url);
-      } else {
-        showMovieCard({ title: title, poster_path: null, release_date: '' }, url);
+        showMovieCard({title: title, poster_path: null, release_date: year || ''}, videoUrl);
       }
     });
 }
@@ -95,7 +63,7 @@ function showMovieCard(movie, videoUrl) {
 
   container.innerHTML += `
     <div class="col-md-3 mb-4">
-      <div class="card h-100">
+      <div class="card bg-dark text-white h-100">
         <img src="${poster}" class="card-img-top" alt="${movie.title}">
         <div class="card-body">
           <h5 class="card-title">${movie.title}</h5>
@@ -107,8 +75,6 @@ function showMovieCard(movie, videoUrl) {
   `;
 }
 
-fetchDriveFiles();
-</script>
-
-</body>
+listFiles();
+</script></body>
 </html>
