--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>RajFlix Auto Poster</h1>
   <div id="movies" class="grid"></div>
-
+<div id="pagination" style="margin-top:20px;"></div>
   <script src="script.js"></script>
 </body>
 </html>
