--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>RajFlix Auto Poster</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>RajFlix</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>RajFlix Auto Poster</h1>
-  <div id="movies" class="grid"></div>
-  <div id="pagination" style="margin-top:20px;"></div>
-  <script src="script.js"></script>
+
+<h2 style="text-align:center;">RajFlix - Recently Uploaded</h2>
+
+<div id="movies"></div>
+
+<div id="pagination" style="text-align:center; margin-top:20px;"></div>
+
+<script src="script.js"></script>
 </body>
 </html>
