--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RajFlix</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RajFlix Lite</title>
+  <style>
+    body { background: #111; color: #fff; font-family: Arial; text-align: center; }
+    #movies { display: flex; flex-wrap: wrap; justify-content: center; }
+    .movie { position: relative; margin: 10px; width: 150px; }
+    .movie img { width: 100%; border-radius: 10px; box-shadow: 0 0 10px #000; }
+    .movie-title { margin-top: 5px; font-size: 14px; }
+    .badge { position: absolute; top: 8px; left: 8px; background: red; color: #fff; padding: 2px 6px; font-size: 10px; border-radius: 5px; }
+    #pagination { margin-top: 20px; }
+    button { padding: 8px 15px; margin: 5px; border: none; background: #444; color: #fff; border-radius: 5px; cursor: pointer; }
+    button:disabled { background: #222; }
+  </style>
 </head>
 <body>
 
-<h2 style="text-align:center;">RajFlix - Recently Uploaded</h2>
-
+<h2>RajFlix Lite</h2>
 <div id="movies"></div>
-
-<div id="pagination" style="text-align:center; margin-top:20px;"></div>
+<div id="pagination"></div>
 
 <script src="script.js"></script>
 </body>
