--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RajFlix Lite</title>
+  <title>RajFlix Auto Fetch</title>
   <style>
-    body { background: #111; color: #fff; font-family: Arial; text-align: center; }
-    #movies { display: flex; flex-wrap: wrap; justify-content: center; }
-    .movie { position: relative; margin: 10px; width: 150px; }
-    .movie img { width: 100%; border-radius: 10px; box-shadow: 0 0 10px #000; }
-    .movie-title { margin-top: 5px; font-size: 14px; }
-    .badge { position: absolute; top: 8px; left: 8px; background: red; color: #fff; padding: 2px 6px; font-size: 10px; border-radius: 5px; }
+    body { font-family: Arial; background: #121212; color: #fff; margin: 0; padding: 20px; }
+    .movie { width: 150px; display: inline-block; margin: 10px; position: relative; }
+    .movie img { width: 100%; border-radius: 8px; }
+    .movie-title { text-align: center; margin-top: 5px; font-size: 14px; }
+    .badge { position: absolute; top: 5px; left: 5px; background: red; color: #fff; padding: 2px 6px; font-size: 12px; border-radius: 4px; }
     #pagination { margin-top: 20px; }
-    button { padding: 8px 15px; margin: 5px; border: none; background: #444; color: #fff; border-radius: 5px; cursor: pointer; }
-    button:disabled { background: #222; }
+    button { padding: 5px 10px; background: #333; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
   </style>
 </head>
 <body>
 
-<h2>RajFlix Lite</h2>
+<h1>RajFlix - Recently Uploaded</h1>
 <div id="movies"></div>
 <div id="pagination"></div>
 
