--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RajFlix Auto Fetch</title>
+  <meta charset="UTF-8">
+  <title>RajFlix Poster Fetch</title>
   <style>
-    body { font-family: Arial; background: #121212; color: #fff; margin: 0; padding: 20px; }
-    .movie { width: 150px; display: inline-block; margin: 10px; position: relative; }
+    body { background: #111; color: #fff; font-family: Arial; padding: 20px; }
+    .movie { display: inline-block; width: 150px; margin: 10px; text-align: center; }
     .movie img { width: 100%; border-radius: 8px; }
-    .movie-title { text-align: center; margin-top: 5px; font-size: 14px; }
-    .badge { position: absolute; top: 5px; left: 5px; background: red; color: #fff; padding: 2px 6px; font-size: 12px; border-radius: 4px; }
+    .movie-title { margin-top: 5px; font-size: 14px; }
     #pagination { margin-top: 20px; }
-    button { padding: 5px 10px; background: #333; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
+    button { background: #333; color: #fff; padding: 5px 10px; border: none; border-radius: 4px; cursor: pointer; }
   </style>
 </head>
 <body>
 
-<h1>RajFlix - Recently Uploaded</h1>
+<h1>RajFlix - Movie Posters</h1>
 <div id="movies"></div>
 <div id="pagination"></div>
 
