--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>RajFlix Poster Fetch</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RajFlix Lite</title>
   <style>
-    body { background: #111; color: #fff; font-family: Arial; padding: 20px; }
-    .movie { display: inline-block; width: 150px; margin: 10px; text-align: center; }
-    .movie img { width: 100%; border-radius: 8px; }
+    body { background: #111; color: #fff; font-family: Arial; text-align: center; }
+    #movies { display: flex; flex-wrap: wrap; justify-content: center; }
+    .movie { position: relative; margin: 10px; width: 150px; }
+    .movie img { width: 100%; border-radius: 10px; box-shadow: 0 0 10px #000; }
     .movie-title { margin-top: 5px; font-size: 14px; }
+    .badge { position: absolute; top: 8px; left: 8px; background: red; color: #fff; padding: 2px 6px; font-size: 10px; border-radius: 5px; }
     #pagination { margin-top: 20px; }
-    button { background: #333; color: #fff; padding: 5px 10px; border: none; border-radius: 4px; cursor: pointer; }
+    button { padding: 8px 15px; margin: 5px; border: none; background: #444; color: #fff; border-radius: 5px; cursor: pointer; }
+    button:disabled { background: #222; }
   </style>
 </head>
 <body>
 
-<h1>RajFlix - Movie Posters</h1>
+<h2>RajFlix Lite</h2>
 <div id="movies"></div>
 <div id="pagination"></div>
 
